--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "webpack serve",
     "watch": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack serve --config ./webpack.dev.config.js",
-    "build": "webpack --config ./webpack.prod.config.js"
+    "dev": "webpack serve --config ./config/webpack.dev.config.js",
+    "build": "webpack --config ./config/webpack.prod.config.js"
   },
   "keywords": [],
   "author": "",
