--- a/babel.config.json
+++ b/babel.config.json
@@ -2,13 +2,16 @@
     "presets": [
       ["@babel/preset-env", {
         "targets": "> 0.25%, not dead"
-      }]
+      }],
+      ["@babel/preset-react"]
     ],
     "plugins": [
       // 不污染全局，在运行时加载
       ["@babel/plugin-transform-runtime", {
         "corejs": 3
-      }]
+      }],
+     ["@babel/plugin-syntax-jsx"],
+     ["@babel/plugin-transform-react-jsx"]
     ]
   }
   
